# Computer-System-Architecture

project/: CMakeLists.txt  animal.cpp  beast.cpp  fish.h  main.cpp
project/project/: animal.h  beast.h  bird.cpp  bird.h  container.h  fish.cpp
project/project/tests/: test1_output  test3  test4_output  test6_generated_output  test7_generated_output  test8_generated_output  test9_generated_output
project/tests/: test2_output  test4  test7_generated  test9_generated
project_1/: container.cpp
project_1/tests/: test1  test10_generated  test10_generated_output  test2  test3_output
project_2/: animal.cpp  animal.h  beast.cpp  beast.h  bird.cpp  bird.h  container.cpp  container.h  fish.cpp  fish.h  main.cpp
project_2/tests/: test5_output  test6_generated  test8_generated
project_3/: animals.py  container.py  main.py  Пояснительная записка python.docx
project_3/tests/: test1  test10_generated  test10_generated_output  test11_generated  test11_generated_output  test12_generated  test12_generated_output  test13_generated  test13_generated_output  test14_generated  test14_generated_output  test1_output  test2  test2_output  test3  test3_output  test4  test4_output  test5_output  test6  test6_output  test7  test7_output  test8_generated  test8_generated_output  test9_generated  test9_generated_output
project_4/: commands.txt
project_4/asm/: main.nasm
project_4/c-code/: animal.h  beast.h  bird.h  container.h  fish.h  main.cpp  rnd.h
project_4/tests/: test10_generated  test10_generated_output  test11_generated  test11_generated_output  test12_generated  test6  (+15 more)
(+10 files in other folders)
